# ros-motor-pololu-qik

./: README.md
motor_pololu_qik/: CMakeLists.txt  package.xml
motor_pololu_qik/include/pololu_qik/: PololuQikActivity.hpp
motor_pololu_qik/src/: .PololuQikActivity.cpp.swp  PololuQikActivity.cpp  pololu_qik_node.cpp
motor_pololu_qik/test/: configure_driver  motor_test
