<?xml version="1.0"?>
<package>
  <name>motor_pololu_qik</name>
  <version>0.0.0</version>
  <description>Pololu Qik driver for multiple Qiks on one bus</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
